[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
rust-version = "1.89"
edition = "2024"


[workspace.dependencies]
deploy_language = { path = "./crates/deploy_language" }
cli_engine = { path = "./crates/cli_engine" }
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0", features = ["preserve_order"]}
str_at_line = { path = "./crates/str_at_line" }
jsonpath-rust = "1.0.4"
json_with_positions = { path = "./crates/json_with_positions" }
log = {  version = "0.4.28", features = ["std"] }
tokio = { version = "1.46.1", features = ["full"]}
fastrand = "2.3.0"
enumdoc = { path = "./crates/enumdoc" }
replays = { path = "./crates/replays" }
