[package]
name = "cli"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
deploy_language = { workspace = true }
cli_engine = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
simple_logger = { version = "5.0.0", default-features = false }
