[package]
name = "cli_engine"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
hex = "0.4.3"
hmac-sha256 = "1.1.12"
tokio = { version = "1.46.1", features = ["full"]}
dcl_language = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
