[package]
name = "cli_engine"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
hex = "0.4.3"
hmac-sha256 = "1.1.12"
tokio = { workspace = true }
dcl_language = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
json_with_positions = { workspace = true }
jsonpath-rust = { workspace = true }
log = { workspace = true }

[dev-dependencies]
assert_matches = "1.5.0"
