[package]
name = "deploy_language"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
jsonpath-rust = { workspace = true }
str_at_line = { workspace = true }
json_with_positions = { workspace = true }

[dev-dependencies]
assert_matches = "1.5.0"
