[package]
name = "json_with_positions"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
str_at_line = { workspace = true }
jsonpath-rust = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_matches = "1.5.0"
