[package]
name = "language_server"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
lsp-server = "0.7.9"
lsp-types = "=0.95.1"
serde_json = "1.0"
serde = { version = "1.0" }
deploy_language = { workspace = true }
str_at_line = { workspace = true }
jsonpath-rust = { workspace = true }
